@@ -171,7 +171,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+							<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-exports=org.simpleflatmapper.jooq/org.simpleflatmapper.jooq.test=org.simpleflatmapper.reflect </argLine>
 							<excludes>
 								<exclude>**/Issue537*</exclude>
 							</excludes>
